boids writing++ and code spacing fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -27,6 +27,11 @@ body {
     border-width: medium;
 }
 
+.content pre {
+    padding: 0 1.5em !important;
+    font-size: 1em;
+}
+
 #center-item {
     border-right-width: 0;
     border-left-width: 0;
